--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1AaM-TVODViMBelZ_0KWNhG_0ZonNZf3F/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -591,7 +591,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1AaM-TVODViMBelZ_0KWNhG_0ZonNZf3F/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
