--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 						<br>
 						<br>
 			            <h2>A Data Analyst</h2>
-						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
-						<!-- <br> -->
+						<h2 class="d-flex" style="margin-bottom: 0">With over 5 months of experience</h2>
+						<br> 
 			            <p><a href="https://www.linkedin.com/in/moghees-hashmi/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
 							<a href="https://github.com/hashmi7238" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -223,7 +223,7 @@
 										<p><span class="title-s">Name: </span> <span>Mohammad Moghees Hashmi</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
 										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
-										<p><span class="title-s">Address: </span> <span>Jamshedpur, India</span></p>
+										<p><span class="title-s">Address: </span> <span>Bengaluru, India</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -298,7 +298,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="5">0</span> <span>+</span>
+									<span class="number" data-number="13">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/moghees-hashmi/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -334,8 +334,8 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-Present</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">Merkle</span>
+						<h2>Data Analyst Intern</h2>
+						<span class="position">Psyliq</span>
 						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
 							<ul>
 								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
