--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Mohammad Moghees Hashmi</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
+										<p><span class="title-s">Experience: </span> <span>6 months</span></p>
 										<p><span class="title-s">Address: </span> <span>Bengaluru, India</span></p>
 									  </div>
 									</div>
@@ -323,7 +323,7 @@
           </div>
         </div>
 
-		<!--
+		
 		<div class="row">
 			<h1 class="big-4">Experience</h1>
 			<div class="underline"></div>
@@ -333,14 +333,14 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-Present</span>
+						<span class="date">May 2024 - Present</span>
 						<h2>Data Analyst Intern</h2>
-						<span class="position">Psyliq</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<span class="position">Navodita Infotech</span>
+						<p class="mt-4">Navodita Infotech, it's a trusted partner dedicated to helping businesses thrive in the digital era.  
 							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+								<li>Conducted in-depth customer analysis to understand behaviours and preferences, aiming to increase sales and improve targeted marketing.</li>
+								<li>Utilized data analytics to identify key customer segments, resulting in more effective sales strategies and marketing campaigns.</li>
+								<li>Enhanced target by analysing customer data to develop profiles, enabling precise targeting and personalized customer engagement.</li>
 							</ul>
 						</p>
 					</div>
@@ -349,20 +349,20 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">iQuanti</span>
-						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
+						<span class="date">Apr 2024 - May 2024</span>
+						<h2>Data Analyst Intern</h2>
+						<span class="position">Psyliq</span>
+						<p class="mt-4">At Psyliq, we redefine career development by offering immersive internships with real-world projects and amazing data sets. 
 							<ul>
-								<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
-								<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
-								<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its feature improvement.</li>
+								<li>Optimized HR Decisions by creating Power BI dashboards and Excel analytics to enhance HR decision-making.</li>
+								<li>Boosted Predictive Models and used SQL for ETL processes, supporting diabetes risk prediction.</li>
+								<li>Improved Retention by Analysing HR data to identify factors affecting engagement and turnover, leading to better retention strategies.</li>
 							</ul>
 						</p>
 					</div>
 
 				</div>
-			</div>-->
+			</div>
 
 		<br>
 		<br>
