--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1AaM-TVODViMBelZ_0KWNhG_0ZonNZf3F/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1sQ0XuM7KNr4VOTMh10YI3p_r57byHweX/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
     		</div>
     	</div>
@@ -504,7 +504,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="7">0</strong>
+                <strong class="number" data-number="13">0</strong>
                 <span>Projects</span>
               </div>
             </div>
@@ -591,7 +591,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1AaM-TVODViMBelZ_0KWNhG_0ZonNZf3F/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1sQ0XuM7KNr4VOTMh10YI3p_r57byHweX/view?usp=drive_link">Resume Link</a></p>
 	          </div>
           </div>
 
