--- a/index.html
+++ b/index.html
@@ -428,12 +428,12 @@
 		  
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/hashmi7238/Diwali_Sales_Analysis_using_Python" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/hashmi7238/Customer_Segmentation_Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/hashmi7238/Diwali_Sales_Analysis_using_Python">Data Analysis on Diwali Sales Data using Python</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <h3 class="heading"><a href="https://github.com/hashmi7238/Customer_Segmentation_Analysis">Customer Segmentation Analysis using Python</a></h3>
+                <p>Performed Exploratory Data Analysis and used Seaborn and Matplotlib to visualize customer behaviours and demographics.</p>
               </div>
             </div>
           </div>
