--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 						<br>
 						<br>
 			            <h2>A Data Analyst</h2>
-						<h2 class="d-flex" style="margin-bottom: 0">With over 5 months of experience</h2>
+						<h2 class="d-flex" style="margin-bottom: 0">With over 7 months of experience</h2>
 						<br> 
 			            <p><a href="https://www.linkedin.com/in/moghees-hashmi/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
 							<a href="https://github.com/hashmi7238" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Mohammad Moghees Hashmi</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>6 months</span></p>
+										<p><span class="title-s">Experience: </span> <span>7 months</span></p>
 										<p><span class="title-s">Address: </span> <span>Bengaluru, India</span></p>
 									  </div>
 									</div>
@@ -264,6 +264,11 @@
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
+									<span>Machine Learning</span> <span class="pull-right">50%</span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -287,7 +292,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Science</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Excel, Google Analytics &amp; SQL</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span> MAchine Learning, Excel, Google Analytics &amp; SQL</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Badminton, Astrophysics</span></li>
 									
 								</ul>
@@ -319,7 +324,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>As a fresh and enthusiastic Data Analyst, I bring proficiency in Python, SQL, data visualization, statistical analysis, Excel, and Power BI. With a strong foundation in data analysis and a passion for problem-solving, I'm eager to contribute to impactful projects while continually honing my skills in the dynamic field of data analytics.</p>
+            <p>As a enthusiastic Data Analyst, I bring proficiency in Python, SQL, data visualization, statistical analysis, Excel, and Power BI. With a strong foundation in data analysis and a passion for problem-solving, I'm eager to contribute to impactful projects while continually honing my skills in the dynamic field of data analytics.</p>
           </div>
         </div>
 
@@ -333,7 +338,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">May 2024 - Present</span>
+						<span class="date">May 2024 - June 2024</span>
 						<h2>Data Analyst Intern</h2>
 						<span class="position">Navodita Infotech</span>
 						<p class="mt-4">Navodita Infotech, it's a trusted partner dedicated to helping businesses thrive in the digital era.  
@@ -377,7 +382,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2020-2023</span>
-    					<h2>Bachelor of Science (physics)</h2>
+    					<h2>Bachelor of Science (Information Technology)</h2>
     					<span class="position">Vinoba Bhave University</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
@@ -591,7 +596,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1sQ0XuM7KNr4VOTMh10YI3p_r57byHweX/view?usp=drive_link">Resume Link</a></p>
+	            <p><a href="https://drive.google.com/file/d/1eDMjcqd_9I5vQH_ktCT_5UBeoKc3WamI/view?usp=drive_link">Resume Link</a></p>
 	          </div>
           </div>
 
