--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Science</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span> MAchine Learning, Excel, Google Analytics &amp; SQL</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span> Machine Learning, Excel, Google Analytics &amp; SQL</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Badminton, Astrophysics</span></li>
 									
 								</ul>
@@ -401,7 +401,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1sQ0XuM7KNr4VOTMh10YI3p_r57byHweX/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="https://drive.google.com/file/d/1eDMjcqd_9I5vQH_ktCT_5UBeoKc3WamI/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
     		</div>
     	</div>
