--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Excel</span> <span class="pull-right">90%</span>
+									<span>Neural Network</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
