--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
 								<h2 class="mb-4">About Me</h2>
 								
 								<p>I am a passionate and driven AI/ML Engineer proficient in <br>Python, SQL, Machine Learning, Deep Learning, statistical analysis,
-									and AWS. Eager to kickstart my career in the field, I bring strong<br> foundation in artificial intelligence and a keen eye for detail.
-									With a<br> commitment to continuous learning and growth, I am excited to<br> leverage my skills to contribute meaningfully to projects and<br> teams.
+									and AWS. Eager to kickstart my career in the field, I bring strong foundation in artificial intelligence and a keen eye for detail
+									With a commitment to continuous learning and growth, I am excited to<br> leverage my skills to contribute meaningfully to projects and<br> teams.
 									I am dedicated to honing my craft and making a<br> positive impact through insightful data-driven decision-making.<br> Ready to take on new challenges
 									and excel in the dynamic<br> world of artificial intelligence.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
