--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
-									<span>Cloud</span> <span class="pull-right">50%</span>
+									<span>AWS Sagemaker</span> <span class="pull-right">50%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
