--- a/index.html
+++ b/index.html
@@ -415,18 +415,18 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python & Power BI .</p>
+            <p>Below are the sample AI/ML projects using Python, Machine Learning, Deep Learning, Neural Network & Transfer Learning.</p>
           </div>
         </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/hashmi7238/Covid_Data_Exploration_using_SQL" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://machine-learning-multiple-diseases-predictive-system-hashmi.streamlit.app/" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/hashmi7238/Covid_Data_Exploration_using_SQL">Covid-19 Data Exploration using SQL Server</a></h3>
-                <p>Explore Covid-19 data using advanced SQL Server queires to identify Death and Vaccination Progress.</p>
+                <h3 class="heading"><a href="https://machine-learning-multiple-diseases-predictive-system-hashmi.streamlit.app/">Multiple Diseases Predictive System</a></h3>
+                <p>Developed a Streamlit-based machine learning web app to predict multiple diseases achieve 85% accuracy.</p>
               </div>
             </div>
           </div>
